changes to ui bugs on smaller displays

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,3 +12,7 @@ body {
     text-wrap: balance;
   }
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
